--- a/index.css
+++ b/index.css
@@ -1,3 +1,49 @@
 * {
   color: black;
+  margin: 0;
+  padding: 0;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.books {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 12px;
+}
+
+#addBook,
+button,
+input {
+  border: 3px solid black;
+}
+
+#addBook {
+  margin: 30px 0;
+  width: 50%;
+}
+
+.remove {
+  margin: 10px;
+}
+
+p {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.books:nth-child(even) { background: #ccc; }
+.books:nth-child(odd) { background: #fff; }
